# finkeith-mcp

./: .env.example  Dockerfile  Dockerfile.mcp  README.md  docker-compose.yaml  pyproject.toml
examples/: architecture_usage.py
src/finkeith/: cologger.py  config.py  dependencies.py  main.py  mcp_gateway.py
src/finkeith/api/v1/: banking.py
src/finkeith/clients/: sepay_client.py  sepay_factory.py
src/finkeith/clients/dtos/: sepay_dtos.py
src/finkeith/clients/interfaces/: isepay_client.py
src/finkeith/core/: exceptions.py
src/finkeith/core/common/: banks.py
src/finkeith/core/entities/: transactions.py
src/finkeith/core/interfaces/: ibanking.py
src/finkeith/schemas/: banking.py  base.py  common.py
src/finkeith/services/: sepay_banking_service.py
src/finkeith/utils/: bank_mapping.py
tests/: README.md  conftest.py  test_api.py  test_sepay.py
